# fortu-site

./: .dockerignore  .env.docker  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  load_env.sh  pyproject.toml
commands/: create_superuser.py
fortu_site/: main.py
fortu_site/application/auth/: dto.py  exceptions.py  interfaces.py  models.py  use_cases.py
fortu_site/application/user/: dto.py  exceptions.py  interfaces.py  models.py
fortu_site/config/: __init__.py  config.py
fortu_site/infrastructure/: logging.py
fortu_site/infrastructure/db/: __init__.py  mapper.py  tables.py  uow.py
fortu_site/infrastructure/di/: config.py  database.py  security.py  usecases.py
fortu_site/infrastructure/security/: auth.py  password.py
fortu_site/web/: exceptions.py  main.py  responses.py
fortu_site/web/api_routers/: __init__.py  auth.py  healthcheck.py
logs/: fortu-site.log.2025-04-22
static/css/: index.css
teawish/: main.py
teawish/application/: db.py
teawish/config/: __init__.py  config.py  utils.py
teawish/infrastructure/: logging.py
teawish/web/: api_key.py  exceptions.py  jinja_templates.py  main.py  middlewares.py  responses.py  utils.py
templates/: 404.html  500.html  base.html  index.html
templates/admin/: admin.html
templates/common/: htmx_paginator.html
templates/components/: 404_content.html  500_content.html  feeds.html  footer.html  home.html  login_form.html  navbar.html  news_list.html  online_indicator.html  refresh_page_content.html  register_form.html
(+102 files in other folders)
